--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,16 +1,20 @@
-FROM python:3.12
+FROM python:3.12.3
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED = 1
 
-WORKDIR /memes_app
+WORKDIR /app
 
-COPY requirements.txt requirements.txt
+RUN curl -sSL https://install.python-poetry.org | python3 -
 
-RUN pip install --no-cache-dir -r requirements.txt
+ENV PATH="/root/.local/bin:$PATH"
+
+COPY pyproject.toml poetry.lock ./
+
+RUN poetry install --only main
 
 ENV USE_DOCKER=1
 
 COPY . .
 
-CMD ["sh", "-c", "sleep 10 && alembic upgrade head && python3 main.py"]
+CMD ["sh", "-c", "sleep 10 && poetry run alembic upgrade head && poetry run python main.py"]
