--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,15 +1,14 @@
-version: '3.12'
+version: '3.10'
 
 volumes:
   postgres_data:
-  minio_data:
 
 services:
   app:
     build:
       context: .
-      dockerfile: "./Dockerfile"
-    container_name: "memes_app"
+      dockerfile: "app/Dockerfile"
+    container_name: "service-status"
     env_file:
       - ".env.docker"
     restart: "always"
@@ -17,7 +16,6 @@ services:
       - "8000:8000"
     depends_on:
       - db
-      - minio
 
   db:
     container_name: "postgres"
@@ -28,15 +26,3 @@ services:
       - "5433:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-
-  minio:
-    container_name: "s3_minio"
-    image: minio/minio:latest
-    env_file:
-      - ".env.docker"
-    ports:
-      - "9000:9000"
-      - "9001:9001"
-    volumes:
-      - minio_data:/data
-    command: server /data --console-address ":9001"
