--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ sqlalchemy = "^2.0.31"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
 pydantic-settings = "^2.3.4"
+requests = "^2.32.3"
 
 
 [tool.poetry.group.dev.dependencies]
